--- a/blueocean-pipeline-editor/package.json
+++ b/blueocean-pipeline-editor/package.json
@@ -17,11 +17,11 @@
   "author": "Josh McDonald <josh@joshmcdonald.info> (https://github.com/sophistifunk)",
   "license": "MIT",
   "devDependencies": {
-    "@jenkins-cd/eslint-config-jenkins": "0.0.2",
     "@jenkins-cd/blueocean-core-js": "0.0.170",
     "@jenkins-cd/design-language": "0.0.158",
+    "@jenkins-cd/eslint-config-jenkins": "0.0.2",
+    "@jenkins-cd/js-builder": "0.0.61-IE1",
     "@jenkins-cd/js-extensions": "0.0.39-kz-2",
-    "@jenkins-cd/js-builder": "0.0.60-kz-1",
     "@kadira/storybook": "2.20.1",
     "babel": "6.5.2",
     "babel-core": "6.17.0",
