--- a/blueocean-pipeline-editor/package.json
+++ b/blueocean-pipeline-editor/package.json
@@ -20,8 +20,8 @@
     "@jenkins-cd/eslint-config-jenkins": "0.0.2",
     "@jenkins-cd/blueocean-core-js": "0.0.170",
     "@jenkins-cd/design-language": "0.0.158",
-    "@jenkins-cd/js-extensions": "0.0.39-kz-2",
-    "@jenkins-cd/js-builder": "0.0.60-kz-1",
+    "@jenkins-cd/js-extensions": "0.0.41",
+    "@jenkins-cd/js-builder": "0.0.62",
     "@kadira/storybook": "2.20.1",
     "babel": "6.5.2",
     "babel-core": "6.17.0",
