--- a/blueocean-web/package.json
+++ b/blueocean-web/package.json
@@ -15,8 +15,8 @@
   "devDependencies": {
     "@jenkins-cd/blueocean-core-js": "0.0.170",
     "@jenkins-cd/design-language": "0.0.158",
-    "@jenkins-cd/js-builder": "0.0.60-kz-1",
-    "@jenkins-cd/js-extensions": "0.0.39-kz-2",
+    "@jenkins-cd/js-builder": "0.0.62",
+    "@jenkins-cd/js-extensions": "0.0.41",
     "babel-eslint": "7.0.0",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-polyfill": "6.16.0",
