--- a/blueocean-config/package.json
+++ b/blueocean-config/package.json
@@ -13,7 +13,7 @@
     "rollbar-browser": "1.9.2"
   },
   "devDependencies": {
-    "@jenkins-cd/js-builder": "0.0.61-IE1",
+    "@jenkins-cd/js-builder": "0.0.63-IE",
     "@jenkins-cd/js-modules": "0.0.10",
     "babel-eslint": "6.1.2",
     "create-hmac": "1.1.4",
