--- a/blueocean-core-js/package.json
+++ b/blueocean-core-js/package.json
@@ -55,7 +55,7 @@
   "devDependencies": {
     "@jenkins-cd/design-language": "0.0.158",
     "@jenkins-cd/eslint-config-jenkins": "0.0.2",
-    "@jenkins-cd/js-builder": "0.0.61-IE1",
+    "@jenkins-cd/js-builder": "0.0.63-IE",
     "@jenkins-cd/js-extensions": "0.0.39-kz-2",
     "@jenkins-cd/js-modules": "0.0.10",
     "@kadira/storybook": "2.20.1",
