--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,14 @@
 
   <name>Blue Ocean Parent</name>
 
+  <licenses>
+    <license>
+      <name>MIT License</name>
+      <url>https://opensource.org/licenses/MIT</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+
   <properties>
     <java.level>8</java.level>
     <jackson.version>2.8.9</jackson.version>
