--- a/jenkins-design-language/package.json
+++ b/jenkins-design-language/package.json
@@ -9,15 +9,14 @@
     "build-storybook": "build-storybook --static-dir dist/assets/ --output-dir website/storybook",
     "flow": "flow",
     "gulp": "gulp build",
-    "test": "gulp test",
     "prepublish": "gulp test",
     "mvnbuild": "gulp build bundle",
     "mvnbuild:fast": "gulp bundle",
     "mvntest": "gulp test",
     "bundle:watch": "gulp bundle:watch",
-    "test:debug": "node --debug-brk ./node_modules/.bin/gulp test-debug",
-    "test:fast": "gulp test-fast",
-    "build": "npm install && npm run gulp",
+    "test": "gulp test",
+    "test:debug": "node --debug-brk ./node_modules/.bin/gulp test:debug",
+    "test:fast": "gulp test:fast",
     "site-build": "harp compile website/ website-build/",
     "site-server": "harp server website --port 3000",
     "site-publish": "./site-publish.sh"
@@ -56,6 +55,7 @@
   },
   "devDependencies": {
     "@jenkins-cd/js-builder": "0.0.62",
+    "@jenkins-cd/js-builder-jest": "0.0.4",
     "@jenkins-cd/js-modules": "0.0.10",
     "@kadira/storybook": "2.35.3",
     "babel-eslint": "7.0.0",
@@ -77,17 +77,12 @@
     "gulp-concat": "2.6.0",
     "gulp-copy": "0.0.2",
     "gulp-eslint": "3.0.1",
-    "gulp-jest": "1.0.0",
     "gulp-less": "3.1.0",
     "gulp-rename": "1.2.2",
     "gulp-sourcemaps": "2.1.1",
     "gulp-svgmin": "1.2.3",
     "harp": "0.24.0",
-    "jest": "19.0.2",
-    "jest-cli": "19.0.2",
-    "jest-junit": "1.5.1",
     "less": "2.7.2",
-    "minimist": "1.2.0",
     "normalize.css": "5.0.0",
     "octicons": "4.4.0",
     "react-addons-test-utils": "15.4.2",
