--- a/blueocean-core-js/package.json
+++ b/blueocean-core-js/package.json
@@ -16,8 +16,7 @@
     "test:fast": "gulp test-fast",
     "mvnbuild": "gulp build bundle",
     "mvnbuild:fast": "gulp bundle",
-    "mvntest": "gulp test",
-    "build": "npm install && npm run gulp"
+    "mvntest": "gulp test"
   },
   "author": "Cliff Meyers <cmeyers@cloudbees.com> (https://www.cloudbees.com/)",
   "contributors": [
