--- a/jenkins-design-language/package.json
+++ b/jenkins-design-language/package.json
@@ -47,7 +47,6 @@
   },
   "jest": {
     "collectCoverageFrom": [
-      "!src/js/components/material-ui/**",
       "src/js/**/*.{js,jsx}"
     ]
   },
@@ -58,10 +57,10 @@
     "moment-duration-format": "1.3.0",
     "react": "15.4.2",
     "react-addons-css-transition-group": "15.4.2",
-    "react-dom": "15.4.2"
+    "react-dom": "15.4.2",
+    "@jenkins-cd/blueocean-material-icons": "0.0.3"
   },
   "devDependencies": {
-    "@jenkins-cd/blueocean-material-icons": "0.0.2",
     "@jenkins-cd/js-builder": "0.0.62",
     "@jenkins-cd/js-builder-jest": "0.0.4",
     "@jenkins-cd/js-modules": "0.0.10",
