--- a/blueocean-core-js/package.json
+++ b/blueocean-core-js/package.json
@@ -36,6 +36,8 @@
     "url": "https://github.com/jenkinsci/blueocean-plugin.git"
   },
   "dependencies": {
+    "@jenkins-cd/design-language": "0.0.158",
+    "@jenkins-cd/js-extensions": "0.0.42",
     "@jenkins-cd/js-modules": "0.0.10",
     "@jenkins-cd/logging": "0.0.6",
     "@jenkins-cd/sse-gateway": "0.0.21",
@@ -49,16 +51,18 @@
     "jsonwebtoken": "7.1.9",
     "mobx": "2.6.0",
     "mobx-utils": "1.1.2",
+    "moment": "2.15.1",
+    "moment-duration-format": "1.3.0",
     "pem-jwk": "1.5.1",
-    "react-remarkable": "1.1.1"
+    "react": "15.4.2",
+    "react-dom": "15.4.2",
+    "react-remarkable": "1.1.1",
+    "react-router": "2.8.1"
   },
   "devDependencies": {
-    "@jenkins-cd/design-language": "0.0.158",
     "@jenkins-cd/eslint-config-jenkins": "0.0.2",
     "@jenkins-cd/js-builder": "0.0.62",
     "@jenkins-cd/js-builder-jest": "0.0.4",
-    "@jenkins-cd/js-extensions": "0.0.41",
-    "@jenkins-cd/js-modules": "0.0.10",
     "@kadira/storybook": "2.20.1",
     "babel-eslint": "7.0.0",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
@@ -81,20 +85,26 @@
     "gulp-rename": "1.2.2",
     "gulp-sourcemaps": "1.6.0",
     "less": "2.7.2",
-    "moment": "2.15.1",
     "nock": "9.0.14",
-    "react": "15.4.2",
     "react-addons-test-utils": "15.4.2",
-    "react-dom": "15.4.2",
-    "react-router": "2.8.1",
     "reactify": "1.1.1",
     "run-sequence": "1.2.2",
     "sinon": "1.17.6",
     "watchify": "3.7.0"
   },
   "jenkinscd": {
+    "export": [
+      "@jenkins-cd/js-extensions",
+      "@jenkins-cd/logging",
+      "mobx"
+    ],
     "import": [
-      "moment@any"
+      "@jenkins-cd/design-language@any",
+      "moment@any",
+      "moment-duration-format@any",
+      "react@any",
+      "react-dom@any",
+      "react-router@any"
     ]
   }
 }
