--- a/jenkins-design-language/package.json
+++ b/jenkins-design-language/package.json
@@ -49,18 +49,19 @@
       "collectCoverageFrom": ["!src/js/components/material-ui/**", "src/js/**/*.{js,jsx}"]
   },
   "dependencies": {
+    "@jenkins-cd/js-modules": "0.0.10",
     "linkifyjs": "2.1.4",
     "lodash.debounce": "4.0.8",
     "moment": "2.15.1",
     "moment-duration-format": "1.3.0",
     "react": "15.4.2",
     "react-addons-css-transition-group": "15.4.2",
-    "react-dom": "15.4.2"
+    "react-dom": "15.4.2",
+    "react-router": "2.8.1"
   },
   "devDependencies": {
     "@jenkins-cd/js-builder": "0.0.62",
     "@jenkins-cd/js-builder-jest": "0.0.4",
-    "@jenkins-cd/js-modules": "0.0.10",
     "@kadira/storybook": "2.35.3",
     "babel-eslint": "7.0.0",
     "babel-polyfill": "6.16.0",
@@ -90,13 +91,17 @@
     "normalize.css": "5.0.0",
     "octicons": "4.4.0",
     "react-addons-test-utils": "15.4.2",
-    "react-router": "2.8.1",
     "run-sequence": "1.2.2",
     "watchify": "3.7.0"
   },
   "jenkinscd": {
     "export": [
-      "moment"
+      "moment",
+      "moment-duration-format",
+      "react",
+      "react-addons-css-transition-group",
+      "react-dom",
+      "react-router"
     ]
   }
 }
