--- a/pom.xml
+++ b/pom.xml
@@ -857,6 +857,11 @@
             <version>4.5.3</version>
         </dependency>
         <dependency>
+            <groupId>com.damnhandy</groupId>
+            <artifactId>handy-uri-templates</artifactId>
+            <version>2.1.6</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpmime</artifactId>
             <version>4.5.3</version>
