--- a/blueocean-material-icons/package.json
+++ b/blueocean-material-icons/package.json
@@ -1,19 +1,10 @@
 {
   "name": "@jenkins-cd/blueocean-material-icons",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Material icons for the Jenkins Design Language",
   "main": "dist/js/components/index.js",
   "scripts": {
-    "lint": "gulp lint",
-    "gulp": "gulp build",
-    "mvnclean": "gulp clean",
-    "mvnbuild": "gulp lint build bundle",
-    "mvnbuild:fast": "gulp bundle",
-    "mvntest": "gulp test",
-    "bundle:watch": "gulp bundle:watch",
-    "test": "gulp test",
-    "test:debug": "node --debug-brk ./node_modules/.bin/gulp test:debug",
-    "test:fast": "gulp test:fast"
+    "babel": "node_modules/.bin/babel src -d dist"
   },
   "author": "Nicolae Pascu <npascu@cloudbees.com> (https://www.cloudbees.com/)",
   "license": "MIT",
@@ -22,31 +13,12 @@
     "url": "https://github.com/jenkinsci/blueocean-plugin.git"
   },
   "dependencies": {
-    "react": "15.4.2",
-    "react-addons-css-transition-group": "15.4.2",
-    "react-dom": "15.4.2"
   },
   "devDependencies": {
-    "@jenkins-cd/js-builder": "0.0.62",
-    "@jenkins-cd/js-builder-jest": "0.0.4",
-    "@jenkins-cd/js-modules": "0.0.10",
-    "@kadira/storybook": "2.35.3",
-    "babel-eslint": "7.0.0",
+    "babel-cli": "6.26.0",
     "babel-polyfill": "6.16.0",
     "babel-preset-es2015": "6.16.0",
     "babel-preset-react": "6.16.0",
-    "babel-preset-stage-0": "6.16.0",
-    "browserify": "13.1.0",
-    "eslint": "2.13.1",
-    "eslint-plugin-react": "4.3.0",
-    "flow-bin": "0.33.0",
-    "gulp": "3.9.1",
-    "gulp-babel": "6.1.2",
-    "gulp-clean": "0.3.2",
-    "gulp-concat": "2.6.0",
-    "gulp-eslint": "3.0.1",
-    "gulp-sourcemaps": "2.1.1",
-    "run-sequence": "1.2.2",
-    "watchify": "3.7.0"
+    "babel-preset-stage-0": "6.16.0"
   }
 }
