--- a/acceptance-tests/pom.xml
+++ b/acceptance-tests/pom.xml
@@ -91,7 +91,6 @@
             <artifactId>jenkins-client</artifactId>
             <version>0.3.7</version>
         </dependency>
-
         <dependency>
             <groupId>org.kohsuke</groupId>
             <artifactId>github-api</artifactId>
@@ -133,11 +132,25 @@
             <artifactId>wiremock</artifactId>
             <version>2.7.1</version>
         </dependency>
+        <!-- end wiremock -->
+        <!-- override guava from bitbucket-rest but ensure UrlEscapers is available -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
         <dependency>
             <groupId>com.cdancy</groupId>
             <artifactId>bitbucket-rest</artifactId>
             <version>1.0.3</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.guava</groupId>
+                    <artifactId>guava</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
+        <!-- end guava -->
     </dependencies>
 
     <build>
