--- a/acceptance-tests/pom.xml
+++ b/acceptance-tests/pom.xml
@@ -21,6 +21,14 @@
         <id>repo.jenkins-ci.org</id>
         <url>http://repo.jenkins-ci.org/public/</url>
       </repository>
+        <repository>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>jcenter</id>
+            <name>bintray</name>
+            <url>http://jcenter.bintray.com</url>
+        </repository>
     </repositories>
     <pluginRepositories>
       <pluginRepository>
@@ -84,11 +92,6 @@
             <version>0.3.7</version>
         </dependency>
         <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>21.0</version>
-        </dependency>
-        <dependency>
             <groupId>org.kohsuke</groupId>
             <artifactId>github-api</artifactId>
             <version>1.85</version>
@@ -129,6 +132,25 @@
             <artifactId>wiremock</artifactId>
             <version>2.7.1</version>
         </dependency>
+        <!-- end wiremock -->
+        <!-- override guava from bitbucket-rest but ensure UrlEscapers is available -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.cdancy</groupId>
+            <artifactId>bitbucket-rest</artifactId>
+            <version>1.0.3</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.guava</groupId>
+                    <artifactId>guava</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <!-- end guava -->
     </dependencies>
 
     <build>
