--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,7 +1,7 @@
 FROM ubuntu:16.04
 
-ENV MAVEN_VERSION 3.5.4
-ENV NODE_VERSION 6.4.0
+ENV MAVEN_VERSION 10.13.0
+ENV NODE_VERSION 6.8.0
 ENV PHANTOMJS_VERSION 2.1.1
 ARG UID=1000
 ARG GID=1000
@@ -25,6 +25,7 @@ RUN apt-get update -qqy \
     python \
     iputils-ping \
     locales \
+    libsass-dev \
   && rm -rf /var/lib/apt/lists/* \
   && sed -i 's/securerandom\.source=file:\/dev\/random/securerandom\.source=file:\/dev\/urandom/' ./usr/lib/jvm/java-8-openjdk-amd64/jre/lib/security/java.security
 
