--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,7 +1,7 @@
 FROM ubuntu:16.04
 
 ENV MAVEN_VERSION 3.5.4
-ENV NODE_VERSION 6.4.0
+ENV NODE_VERSION 10.13.0
 ENV PHANTOMJS_VERSION 2.1.1
 ARG UID=1000
 ARG GID=1000
@@ -25,6 +25,7 @@ RUN apt-get update -qqy \
     python \
     iputils-ping \
     locales \
+    libsass-dev \
   && rm -rf /var/lib/apt/lists/* \
   && sed -i 's/securerandom\.source=file:\/dev\/random/securerandom\.source=file:\/dev\/urandom/' ./usr/lib/jvm/java-8-openjdk-amd64/jre/lib/security/java.security
 
@@ -48,12 +49,6 @@ ENV MAVEN_HOME /usr/share/maven
 RUN wget --no-verbose https://nodejs.org/dist/v$NODE_VERSION/node-v$NODE_VERSION-linux-x64.tar.xz -O /opt/nodejs.tar.xz
 RUN tar -C /usr/local --strip-components 1 -xJf /opt/nodejs.tar.xz
 RUN mkdir /.npm && chmod 777 /.npm
-# Fix bug https://github.com/npm/npm/issues/9863
-RUN cd $(npm root -g)/npm \
-  && npm install fs-extra \
-  && sed -i -e s/graceful-fs/fs-extra/ -e s/fs\.rename/fs.move/ ./lib/utils/rename.js
-# Update to latest version so optional dependencies + shrinkwrap work
-RUN npm install -g npm@3.10.3
 
 #=============================================
 # Misc packages needed by the ATH
