--- a/blueocean-executor-info-plugin/pom.xml
+++ b/blueocean-executor-info-plugin/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>io.jenkins.blueocean</groupId>
         <artifactId>blueocean-parent</artifactId>
-        <version>1.13.0</version>
+        <version>1.13.2-SNAPSHOT</version>
     </parent>
     <name>Blue Ocean Executor Info</name>
     <artifactId>blueocean-executor-info</artifactId>
