--- a/pom.xml
+++ b/pom.xml
@@ -43,11 +43,10 @@
     <jacoco.missedclass.coverage>0.00</jacoco.missedclass.coverage>
     <hpi.dependencyResolution>runtime</hpi.dependencyResolution>
     <jenkins-test-harness.version>2.63</jenkins-test-harness.version>
-    <scm-api.version>2.6.3</scm-api.version>
-    <git.version>3.9.3</git.version>
     <access-modifier-checker.failOnError>true</access-modifier-checker.failOnError>
     <workflow-support.version>3.3</workflow-support.version>
     <pipeline-model-definition.version>1.6.0</pipeline-model-definition.version>
+    <scm-api-plugin.version>2.6.3</scm-api-plugin.version>
   </properties>
 
   <scm>
@@ -360,6 +359,30 @@
             <version>${project.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>ssh-credentials</artifactId>
+            <version>1.18.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>trilead-api</artifactId>
+            <version>1.0.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>git</artifactId>
+            <version>4.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>git</artifactId>
+            <version>4.3.0</version>
+            <classifier>tests</classifier>
+            <scope>test</scope>
+        </dependency>
+
         <!-- Pipeline plugins -->
         <dependency>
             <groupId>org.jenkinsci.plugins</groupId>
@@ -431,7 +454,7 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-scm-step</artifactId>
-            <version>2.9</version>
+            <version>2.11</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
@@ -454,31 +477,12 @@
             <artifactId>pipeline-milestone-step</artifactId>
             <version>1.3.1</version>
         </dependency>
-        <dependency>
-            <groupId>com.coravy.hudson.plugins.github</groupId>
-            <artifactId>github</artifactId>
-            <version>1.29.3</version>
-            <exclusions>
-
-                <!-- Upper bound fix: Remove it once token-macro plugin is fixed to remove dependency on asm-tree
-                     PR: https://github.com/jenkinsci/token-macro-plugin/pull/31
-                -->
-                <exclusion>
-                    <groupId>org.ow2.asm</groupId>
-                    <artifactId>asm-tree</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.ow2.asm</groupId>
-                    <artifactId>asm</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
 
         <!-- scm plugins -->
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>scm-api</artifactId>
-            <version>${scm-api.version}</version>
+            <version>${scm-api-plugin.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
@@ -513,22 +517,6 @@
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-artifact</artifactId>
             <version>3.5.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jenkins-ci.plugins</groupId>
-            <artifactId>git</artifactId>
-            <version>${git.version}</version>
-            <exclusions>
-                <!-- Upper dependency fix: annotation-indexer comes from core, exclude from git -->
-                <exclusion>
-                    <groupId>org.jenkins-ci</groupId>
-                    <artifactId>annotation-indexer</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.httpcomponents</groupId>
-                    <artifactId>httpasyncclient</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
 
         <!-- Other -->
@@ -579,18 +567,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.jenkins-ci.plugins</groupId>-->
-<!--            <artifactId>credentials</artifactId>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.jenkins-ci.plugins</groupId>-->
-<!--            <artifactId>plain-credentials</artifactId>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.jenkins-ci.plugins</groupId>-->
-<!--            <artifactId>ssh-credentials</artifactId>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>cloudbees-folder</artifactId>
@@ -741,13 +717,6 @@
             </exclusions>
         </dependency>
 
-        <!-- Needed for blueocean-display-url plugin -->
-<!--        <dependency>-->
-<!--            <groupId>org.jenkins-ci.plugins</groupId>-->
-<!--            <artifactId>junit</artifactId>-->
-<!--            <version>1.23</version>-->
-<!--        </dependency>-->
-
         <!-- used in blueocean-rest-impl test -->
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
@@ -861,12 +830,6 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- github pulls token-macro 1.11 that doesn't get resolved -->
-        <dependency>
-            <groupId>org.jenkins-ci.plugins</groupId>
-            <artifactId>token-macro</artifactId>
-            <version>2.1</version>
-        </dependency>
         <dependency>
             <!--
             jsoup HTML parser library @ http://jsoup.org/
@@ -884,16 +847,9 @@
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
-            <artifactId>git</artifactId>
-            <classifier>tests</classifier>
-            <version>${git.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>scm-api</artifactId>
-            <version>${scm-api.version}</version>
             <classifier>tests</classifier>
+            <version>${scm-api-plugin.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -1010,7 +966,6 @@
 
       <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.0</version>
           <configuration>
               <systemProperties>
                   <property>
